apps/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: web-ui
      port: 9091
      targetPort: web-ui
