apps/media/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-ca
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-com
  hostnames:
    - transmission.travisprosser.ca
    - transmission.travisprosser.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission
          port: 9091
