apps/media/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-cluster-issuer
spec:
  ingressClassName: traefik
  tls:
    - secretName: transmission-tls-cert
      hosts:
        - transmission.new.travisprosser.com
  rules:
    - host: transmission.home-server-k3s.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: transmission
                port:
                  name: web-ui
    - host: transmission.new.travisprosser.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: transmission
                port:
                  name: web-ui
